2003-02-15  Jim Meyering  <jim@meyering.net>

	Add Irix6 support to physmem.c.
	* physmem.c (irix_sysget): New function.
	(IRIX_SYSGET_TOTAL, IRIX_SYSGET_AVAILABLE): New macros.
	(physmem_total, physmem_available): Use them.

2003-02-11  Jim Meyering  <jim@meyering.net>

	* Makefile.am (libfetish_a_SOURCES): Add euidaccess.h.
	* euidaccess.c: Include "euidaccess.h".
	* euidaccess.h: New file.

2003-02-08  Jim Meyering  <jim@meyering.net>

	* ftw.c (ftw_startup): Don't shadow outer declaration of save_err.
	Merge inconsequential changes from libc.

	* ftw.c (ftw_startup): When using FTW_CHDIR, always remember
	the current directory, not just when DIR contains a slash.
	Reported by Manoj Srivastava via Michael Stone as Debian bug #180228.

2003-02-07  Jim Meyering  <jim@meyering.net>

	Merge inconsequential changes from libc.
	* ftw.c: Include limits.h earlier.
	Move PATH_MAX definition `down' a little; add comment.
	Rename local, saved_errno to save_err.

2003-02-06  Jim Meyering  <jim@meyering.net>

	Support for pruning.
	* ftw_.h (FTW_DPRE) [enum]: New member and definition.
	(struct FTW) [skip]: New member.

	* search_.h (__restrict): Define to `restrict' or to nothing.

	* fsusage.c: Remove declaration of statfs.
	It conflicted with one from OSF/1 5.1 in <sys/mount.h>.
	Reported by Nelson Beebe.

2003-02-05  Jim Meyering  <jim@meyering.net>

	Fix a heap-corruption bug that affected Solaris systems.
	* ftw.c: Include <limits.h>.
	(PATH_MAX): Define to 1024, if not already defined.
	(process_entry): Allocate enough space to hold the resulting
	file name.  Don't presume that 2*dirbufsize is enough.
	(ftw_startup): Always use PATH_MAX to compute buffer size, now that
	it is guaranteed to be defined.
	Nelson Beebe reported that du would sometimes segfault on Solaris.

	* ftw.c (process_entry): When using FTW_DEPTH, call `func', the
	user-supplied callback, once for the current directory before calling
	ftw_dir, in case that part of the hierarchy should be pruned.